# ewa_test_implementation

./: .gitignore  Makefile  README.md  pyproject.toml  stacker_train.py
evidence/paydate/: metrics_by_frequency.csv  metrics_overall.json
evidence/risk/: business_simulation.csv  evaluation_summary.json  slice_pay_frequency.csv
paydate_model/: __init__.py  evaluate.py  infer.py  predictor.py  schedule.py
risk_model/: __init__.py  datasets.py  evaluate.py  features.py  report.md  splits.py  train.py  tune_lightgbm.py
tests/: test_paydate.py  test_risk.py
